<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:id="@+id/permission_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/spacing"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing"
            android:paddingBottom="@dimen/top_padding">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/error_icon"
                android:tint="?attr/colorOnSurface" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/grant_permissions" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:paddingHorizontal="@dimen/spacing"
                android:paddingVertical="@dimen/spacing"
                android:text="@string/permission_alert"
                android:textSize="12sp" />

            <Button
                android:id="@+id/try_get_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/top_padding"
                android:text="@string/try_get_permissions" />
        </LinearLayout>
    </ScrollView>

    <androidx.wear.widget.WearableRecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/top_padding"
        android:paddingBottom="@dimen/spacing"
        android:visibility="visible" />
</FrameLayout>