<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="false">

    <LinearLayout
        android:id="@+id/new_folder_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/left_right_padding"
        android:paddingTop="@dimen/top_bottom_padding"
        android:paddingEnd="@dimen/left_right_padding"
        android:paddingBottom="@dimen/top_bottom_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/new_folder_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/folder_name"
            android:inputType="text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/create_folder"
            style="@style/button"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/create_folder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rename_folder_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/left_right_padding"
        android:paddingTop="@dimen/top_bottom_padding"
        android:paddingEnd="@dimen/left_right_padding"
        android:paddingBottom="@dimen/top_bottom_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/rename_folder_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/folder_name"
            android:inputType="text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/rename_folder"
            style="@style/button"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:enabled="false"
            android:text="@string/rename" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/confirm_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/left_right_padding"
            android:paddingTop="@dimen/top_bottom_padding"
            android:paddingEnd="@dimen/left_right_padding"
            android:paddingBottom="@dimen/top_bottom_padding">

            <TextView
                android:id="@+id/confirm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cancel_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/button_background_enabled"
                    android:backgroundTint="@color/secondaryContainer"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:longClickable="true"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:contentPadding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/close"
                        app:tint="@color/onSecondaryContainer" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirm_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/button_background_enabled"
                    android:backgroundTint="@color/primary"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:longClickable="true"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:contentPadding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/done"
                        app:tint="@color/onPrimary" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/permission_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_boxedEdges="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/left_right_padding"
            android:paddingTop="@dimen/top_bottom_padding"
            android:paddingEnd="@dimen/left_right_padding"
            android:paddingBottom="@dimen/top_bottom_padding"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/permission_alert"
                android:textSize="16sp" />

            <Button
                android:id="@+id/grand_permission_button"
                style="@style/button"
                android:layout_gravity="center_horizontal"
                android:text="@string/grant_permissions" />
        </LinearLayout>
    </ScrollView>

    <androidx.wear.widget.WearableRecyclerView
        android:id="@+id/files_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingTop="24dp"
        android:paddingEnd="8dp"
        android:paddingBottom="24dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:visibility="visible"
        tools:listitem="@layout/file_item">

    </androidx.wear.widget.WearableRecyclerView>

    <androidx.wear.widget.WearableRecyclerView
        android:id="@+id/more_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:paddingHorizontal="8dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        tools:listitem="@layout/file_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all"/>

</androidx.wear.widget.BoxInsetLayout>